--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+server.port=9999
 
+#DataBase Setting
+spring.datasource.hikari.maximum-pool-size=4
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/sseuktudy?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.username=ssafy
+spring.datasource.password=ssafy
+
+#MyBatis Setting
+mybatis.type-aliases-package=tayo.sseuktudy.dto
+mybatis.mapper-locations=mapper/**/*.xml
+
+#File Upload size Setting
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
+#log level Setting
+logging.level.root=info
+logging.level.com.ssafy.happyhouse=debug
+
+#Failed to start bean 'documentationPluginsBootstrapper'; error
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
