feat : 인증번호 발송 API(난수화, DB저장) #19

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -18,6 +18,8 @@ dependencies {
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
 	runtimeOnly 'mysql:mysql-connector-java:8.0.29'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	compileOnly 'org.projectlombok:lombok' //메일 롬북
+	annotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
