--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,7 +18,19 @@ spring.servlet.multipart.max-request-size=5MB
 
 #log level Setting
 logging.level.root=info
-logging.level.com.ssafy.happyhouse=debug
+logging.level.tayo.sseuktudy=debug
 
 #Failed to start bean 'documentationPluginsBootstrapper'; error
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+#mail setting
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=1552419@gmail.com
+spring.mail.password=csqtkicjychhqxwj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.mail.transport.protocol=smtp
+spring.mail.debug=true
+spring.mail.default.encoding=UTF-8
