--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -14,9 +14,12 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-mail' //메일 서버 디팬던시
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
 	runtimeOnly 'mysql:mysql-connector-java:8.0.29'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	compileOnly 'org.projectlombok:lombok' //메일 롬북
+	annotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
