fix : 어플리케이션 프로퍼티 - AWS DB연결 정보 변경 #43

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=9999
 spring.datasource.hikari.maximum-pool-size=4
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/sseuktudy?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://ec2-34-199-120-230.compute-1.amazonaws.com:3306/sseuktudy?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 
