feat : AWS 배포(임시) 완료 (#55)
* feat : 메일 체크 구현(3분이내), 메일 전송 수정(mailDelete)#19

* feat : 메일 전송(아이디 중복체크 구현), Mail 관련 매퍼 리팩토링#19

* feat : 회원 탈퇴 구현 완료(jwt 미완) #19

* feat : AWS 배포 목적 환경세팅 #43

* fix : 어플리케이션 프로퍼티 - AWS DB연결 정보 변경 #43

Co-authored-by: hm <67681207+gandi0330@users.noreply.github.com>

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.7.0'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'war'
 }
 
 group = 'tayo'
@@ -16,7 +17,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-mail' //메일 서버 디팬던시
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
-	implementation 'io.jsonwebtoken:jjwt:0.9.0'
+	implementation 'io.jsonwebtoken:jjwt:0.9.0' //jwt 토큰
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat' //배포
 	runtimeOnly 'mysql:mysql-connector-java:8.0.29'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.2' //jwt 토큰
