--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -15,6 +15,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security' // 스프링 시큐리티
 	implementation 'org.springframework.boot:spring-boot-starter-mail' //메일 서버 디팬던시
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
 	implementation 'io.jsonwebtoken:jjwt:0.9.0' //jwt 토큰
