--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.3",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "craco-alias": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -41,7 +44,6 @@
     ]
   },
   "devDependencies": {
-    "axios": "^0.27.2",
     "eslint": "^8.15.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
