--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "react": "^18.1.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
